# alive

./: .gitmodules  CMakeLists.txt
.github/: constants.env
alive_editor/: CMakeLists.txt
alive_editor/editor/document/: document.cpp  document.h
alive_editor/editor/interfaces/: timeline.h
alive_editor/editor/settings/: composition_setting.h  file_based_layer_setting.h  layer_setting.cpp  layer_setting.h  solid_layer_setting.h  text_layer_setting.h
alive_editor/editor/tagging/: ITagModel.h
alive_editor/editor/undo_support/: command.h  command_enums.h  document_commands.cpp  document_commands.h  document_undo_manager.cpp  document_undo_manager.h  functor_commands.cpp  functor_commands.h  keyframe_commands.cpp  keyframe_commands.h  layer_command.cpp  layer_command.h  layer_commands.cpp  layer_commands.h  object_commands.cpp  object_commands.h  property_commands.cpp  property_commands.h  shape_item_commands.cpp  shape_item_commands.h  timeline_commands.cpp  timeline_commands.h  undostack.cpp  undostack.h
icons/dark/: index.theme
src/: CMakeLists.txt
src/alive/: CMakeLists.txt  action_ids.h  application.cpp  application.h  main.cpp
src/gui/: CMakeLists.txt  action_contexts.h  color_utility.h  cursor_manager.cpp  cursor_manager.h  font_model.cpp  font_model.h  gui_initializer.cpp  gui_initializer.h  gui_utility.h  icon_manager.cpp  icon_manager.h  timeline_model_helpers.cpp  timeline_model_helpers.h
src/gui/composition/: timeline.cpp  timeline.h
src/gui/delegates/: delegate_utility.cpp  delegate_utility.h  edit_column_delegate.cpp  edit_column_delegate.h  feature_column_delegate.cpp  feature_column_delegate.h  layer_column_delegate.cpp  layer_column_delegate.h  timeline_column_delegate.cpp  timeline_column_delegate.h  tree_column_delegate.cpp  tree_column_delegate.h
src/gui/dialogs/: composition_setting_dialog.cpp  composition_setting_dialog.h  composition_setting_dialog.ui  file_based_layer_setting_dialog.cpp  file_based_layer_setting_dialog.h  file_based_layer_setting_dialog.ui  solid_layer_setting_dialog.cpp  solid_layer_setting_dialog.h  solid_layer_setting_dialog.ui
src/gui/document/: composition_document.cpp  composition_document.h  composition_document_model.cpp  composition_document_model.h  composition_document_proxy_model.cpp  composition_document_proxy_model.h
src/gui/document/factories/: editor_layer_factory.cpp  editor_layer_factory.h
src/gui/framework/canvas/: canvas_interface.cpp  canvas_interface.h
src/gui/framework/managers/: action_manager.cpp  action_manager.h
src/gui/framework/theme/: alive_style.cpp  alive_style.h  color_palette.cpp  color_palette.h  messagebox.cpp  messagebox.h
src/gui/framework/widgets/: bezier_curve_editor.cpp  bezier_curve_editor.h  new_property_dialog.cpp  new_property_dialog.h  new_property_dialog.ui  script_editor_dialog.cpp  script_editor_dialog.h  script_editor_dialog.ui  timeline_expression_editor.cpp  timeline_expression_editor.h  toolbar.cpp  toolbar.h  toolbar_property_widget.cpp  toolbar_property_widget.h
src/gui/framework/widgets/property_editor/: property_widget_base.cpp  property_widget_base.h  property_widget_factory.cpp  property_widget_factory.h
src/gui/managers/: dock_action_manager.cpp  dock_action_manager.h
src/gui/model/: composition_item_model.cpp  composition_item_model.h  undostack_model.cpp  undostack_model.h
src/gui/model/layers/: gui_settings.cpp  gui_settings.h  shape_layer_modifier.cpp  shape_layer_modifier.h
src/gui/model/property/: gui_property.h  property_editor_callbacks.cpp  property_editor_callbacks.h
src/gui/project/: global_selection_manager.cpp  global_selection_manager.h  project_manager.cpp  project_manager.h
src/gui/quick/: keyframe_item.cpp  keyframe_item.h  range_selector_handle.cpp  range_selector_handle.h  range_selector_helper.cpp  range_selector_helper.h  timeline_ruler.cpp  timeline_ruler.h
src/gui/settings/: config_constants.h  timeline_settings.cpp  timeline_settings.h  user_settings.cpp  user_settings.h  user_ui_setting.cpp  user_ui_setting.h
src/gui/tagging/: tag_model.cpp  tag_model.h
src/gui/tests/: CMakeLists.txt  SOLID_LAYER.json  main.cpp
src/gui/tests/model/: composition_tests.cpp  composition_tests.h
src/gui/tests/model/property/: numeric_property_tests.cpp  numeric_property_tests.h  property_descriptor_tests.cpp  property_descriptor_tests.h
src/gui/theme/: canvas_color_setting.h  dark_style.cpp  dark_style.h  layer_color_model.cpp  layer_color_model.h  norwegian_woodstyle.cpp  norwegian_woodstyle.h  timeline_style.cpp  timeline_style.h
src/gui/utility/: font_proxy_filter_model.cpp  font_proxy_filter_model.h  gui_utility.cpp  gui_utility.h  keyframe_gui_utility.cpp  keyframe_gui_utility.h  keyframe_selection_manager.cpp  keyframe_selection_manager.h
src/gui/utility/value_provider/: keyframe_value_provider.h  single_value_provider.h
src/gui/widgets/: alive_widget.h  canvas_tab_widget.cpp  canvas_tab_widget.h  canvas_widget.cpp  canvas_widget.h  central_widget.cpp  central_widget.h  checkable_icon.cpp  checkable_icon.h  color_line_editor.cpp  color_line_editor.h  color_selection_label.cpp  color_selection_label.h  dock_widget.cpp  dock_widget.h  edit_column_header.cpp  edit_column_header.h  exclusive_toolbutton_group.cpp  exclusive_toolbutton_group.h  font_setting_widget.cpp  font_setting_widget.h  font_setting_widget.ui  label_editor.cpp  label_editor.h  line_editor.cpp  line_editor.h  linked_number_editor.cpp  linked_number_editor.h  main_window.cpp  main_window.h  menubar.cpp  menubar.h  number_editor.cpp  number_editor.h  property_group_widget.cpp  property_group_widget.h  tab_widget.cpp  tab_widget.h  tag_managememt_widget.cpp  tag_managememt_widget.h  (+25 more)
src/sample_library/: CMakeLists.txt  sample_library.cpp
